# autowt

./: .autowt.toml  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  example_config.toml  go.mod  go.sum  main.go  mise.toml  mkdocs.yml  output_plan.md  pyproject.toml  refactor_opportunities.md  setup.sh
.claude/: settings.json  settings.local.json
.claude/commands/: prerelease.md  release.md  submit.md  update.md
.claude/hooks/: validate-changelog.py
.github/workflows/: ci.yml  docs.yml  go.yml  release.yml
cmd/awt/: main.go
docs/: CHANGELOG.md  agents.md  aiagentworkflows.md  branchmanagement.md  clireference.md  commands.md  common-workflows.md  configuration.md  gettingstarted.md  index.md  initscripts.md  install.md  lifecycle-hooks.md  lifecyclehooks.md  terminalintegration.md  terminalsupport.md  troubleshooting.md
docs/cookbook/: docker.md  env.md  linear.md  uniqueports.md
docs/stylesheets/: extra.css
internal/branch/: interpolate.go  interpolate_test.go  normalize.go  normalize_test.go  prefix.go  prefix_test.go  sanitize.go  sanitize_test.go
internal/cli/: app.go  cleanup.go  config.go  hook.go  ls.go  root.go  shellinit.go  switch.go
internal/config/: config.go  loader.go  loader_test.go  platform.go
internal/console/: console.go
internal/git/: git.go  parser.go  parser_test.go  resolve.go
internal/github/: github.go
internal/hooks/: hooks.go
internal/model/: model.go
internal/prompt/: prompt.go
internal/ui/: cleanup.go  (+3 more)
scripts/: claude-hook-lint.sh  prepare-docs.sh  sync_readme.py  update_docs_help.py
tests/: conftest.py
(+82 files in other folders)
