[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autowt"
version = "0.1.0"
description = "Customizable git worktree manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Steve", email = "steve@example.com"},
]
keywords = ["git", "worktree", "development", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Shells",
]
dependencies = [
    "click>=8.0.0",
    "textual>=0.50.0",
    "toml>=0.10.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
autowt = "autowt.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
# Enforce that imports are at the top of files
extend-select = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "cimonitor>=0.1.4",
    "pytest-cov>=6.2.1",
    "pre-commit>=3.0.0",
]
